tests/arithmetics.res



3
21
-1
20
12
1
8
